err/ea.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/dsnparse-0.1.11.egg-info'...
Listing './lib/python3.5/site-packages/ea'...
Listing './lib/python3.5/site-packages/ea/blocks'...
Listing './lib/python3.5/site-packages/ea/blocks/router'...
Listing './lib/python3.5/site-packages/ea/blocks/router/tests'...
Listing './lib/python3.5/site-packages/ea/cqrs'...
Listing './lib/python3.5/site-packages/ea/cqrs/command'...
Listing './lib/python3.5/site-packages/ea/cqrs/command/command'...
Listing './lib/python3.5/site-packages/ea/cqrs/command/issuer'...
Listing './lib/python3.5/site-packages/ea/cqrs/command/runner'...
Listing './lib/python3.5/site-packages/ea/cqrs/command/storage'...
Listing './lib/python3.5/site-packages/ea/cqrs/command/storage/sql'...
Listing './lib/python3.5/site-packages/ea/cqrs/query'...
Listing './lib/python3.5/site-packages/ea/ddd'...
Listing './lib/python3.5/site-packages/ea/es'...
Listing './lib/python3.5/site-packages/ea/es/tests'...
Listing './lib/python3.5/site-packages/ea/event'...
Listing './lib/python3.5/site-packages/ea/event/contrib'...
Listing './lib/python3.5/site-packages/ea/event/contrib/apollo_proton'...
Listing './lib/python3.5/site-packages/ea/event/factory'...
Listing './lib/python3.5/site-packages/ea/event/schema'...
Listing './lib/python3.5/site-packages/ea/event/transport'...
Listing './lib/python3.5/site-packages/ea/lib'...
Listing './lib/python3.5/site-packages/ea/messaging'...
Listing './lib/python3.5/site-packages/ea/messaging/handlers'...
Listing './lib/python3.5/site-packages/ea/saga'...
Listing './lib/python3.5/site-packages/ea/schema'...
Listing './lib/python3.5/site-packages/ea-1.1.7.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/marshmallow'...
Listing './lib/python3.5/site-packages/marshmallow-2.15.0.dist-info'...
Listing './lib/python3.5/site-packages/phonenumbers'...
Listing './lib/python3.5/site-packages/phonenumbers/carrierdata'...
Listing './lib/python3.5/site-packages/phonenumbers/data'...
Listing './lib/python3.5/site-packages/phonenumbers/geodata'...
Listing './lib/python3.5/site-packages/phonenumbers/shortdata'...
Listing './lib/python3.5/site-packages/phonenumbers/tzdata'...
Listing './lib/python3.5/site-packages/phonenumbers-8.8.9.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
